[tool.poetry]
name = "kylin-rpc"
version = "0.1.0"
description = "A simple JSON-RPC implementation for FastAPI"
authors = ["Kylin <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
pytest = "^8.2.2"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
msgpack = "^1.0.8"
httpx = "^0.27.0"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
