[tool.poetry]
name = "kylin-rpc"
version = "0.0.1"
description = "RPC implementation for FastAPI"
authors = ["Kylin <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "krpc" },
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
pytest = "^8.2.2"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
msgpack = "^1.0.8"
httpx = "^0.27.0"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/InfernalAzazel/kylin-rpc.git"
Documentation = "https://infernalazazel.github.io/kylin-rpc/"
Repository = "https://github.com/InfernalAzazel/kylin-rpc.git"
Issues = "https://github.com/InfernalAzazel/kylin-rpc/issues"
